# BikeRent.WebClient/Api/newswagger.json
@@ -887,7 +887,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Bike"
+                    "$ref": "#/components/schemas/BikeCountDto"
                   }
                 }
               },
@@ -895,7 +895,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Bike"
+                    "$ref": "#/components/schemas/BikeCountDto"
                   }
                 }
               },
@@ -903,7 +903,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Bike"
+                    "$ref": "#/components/schemas/BikeCountDto"
                   }
                 }
               }
@@ -924,29 +924,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string",
-                    "format": "date-span"
-                  }
+                  "$ref": "#/components/schemas/TimeStatDto"
                 }
               },
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string",
-                    "format": "date-span"
-                  }
+                  "$ref": "#/components/schemas/TimeStatDto"
                 }
               },
               "text/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string",
-                    "format": "date-span"
-                  }
+                  "$ref": "#/components/schemas/TimeStatDto"
                 }
               }
             }
@@ -983,6 +971,38 @@
             "maxLength": 10,
             "minLength": 1,
             "type": "string"
+          }
+        },
+        "additionalProperties": false
+      },
+      "BikeCountDto": {
+        "required": [
+          "color",
+          "count",
+          "id",
+          "model"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "description": "Bike Id",
+            "format": "int32"
+          },
+          "model": {
+            "type": "string",
+            "description": "Bike model",
+            "nullable": true
+          },
+          "color": {
+            "type": "string",
+            "description": "Bike color",
+            "nullable": true
+          },
+          "count": {
+            "type": "integer",
+            "description": "Nuber of bikes",
+            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -1196,6 +1216,27 @@
             "type": "string",
             "description": "End of the rent",
             "format": "date-time"
+          }
+        },
+        "additionalProperties": false
+      },
+      "TimeStatDto": {
+        "type": "object",
+        "properties": {
+          "maximum": {
+            "type": "string",
+            "description": "Max rental time",
+            "format": "date-span"
+          },
+          "minimum": {
+            "type": "string",
+            "description": "Min rental time",
+            "format": "date-span"
+          },
+          "average": {
+            "type": "string",
+            "description": "Average rental time",
+            "format": "date-span"
           }
         },
         "additionalProperties": false
